<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BTech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_in_to_your_account">Вход в аккаунт</string>
    <string name="Enter_your_email">Введите почту</string>
    <string name="Enter_the_password">Введите пароль</string>
    <string name="Forgot_your_password">Забыли пароль?</string>
    <string name="Enter">Войти</string>
    <string name="Or">Или</string>
    <string name="Create_an_account">Создать аккаунт</string>
    <string name="register">Регистрация</string>
    <string name="phone_number">Номер телефона</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="agreement">Нажимая кнопку «Создать аккаунт», я даю свое согласие на обработку моих персональных данных, в соответствии с Государственным законом от 27.07.2006 года №38 «О персональных данных»</string>
    <string name="creating_account">Создать аккаунт</string>
    <string name="or_exit">или Войти</string>
    <string name="getting_kod">Получить новый код</string>
    <string name="verification">Потвердить</string>
    <string name="kod_saved">Код потверждения отправлен на номер</string>
    <string name="Help_and_support">Помощь и поддержка</string>
    <string name="About_us">О нас</string>
    <string name="Purchase_history">История покупок</string>
    <string name="Coupons">Купоны</string>
    <string name="Favourites">Избранное</string>
    <string name="Settings">Настройка</string>
    <string name="Account">Аккаунт</string>
    <string name="_996550550550">+996550550550</string>
    <string name="main_name" tools:ignore="TypographyEllipsis">Абдурахман Абдурахм...</string>
    <string name="main">Главная</string>
    <string name="new_products">Новое</string>
    <string name="basket">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="model_of_phone">model of phone</string>
    <string name="color_in_russian">Цвет</string>
    <string name="purple_in_russian">Фиолет.</string>
    <string name="storage_in_russian">Память</string>
    <string name="_64">64Гб</string>
    <string name="_128">128Гб</string>
    <string name="_256">256Гб</string>
    <string name="reviews_in_russian">Отзывы</string>
    <string name="image_heart">image heart</string>
    <string name="add_to_bin_in_russian">Добавь в корзину</string>
    <string name="name">Имя</string>
    <string name="_489">рассрочка от 489с./ месяц</string>
    <string name="samsung_galaxy_a_52_5g_eu">Samsung Galaxy A 52 5G (EU)</string>
    <string name="_45_000_c">45 000 cом</string>
    <string name="find_your_gadget">Найди свой гаджет!</string>
    <string name="current">Актуальное</string>
    <string name="popular_categories">Популярные категории</string>
    <string name="goods_of_the_Day">Товары дня</string>
    <string name="new_year_discounts">Новогодние скидки</string>
    <string name="smartphones">Смартфоны</string>
    <string name="back">назад</string>
    <string name="Basket">Корзина</string>
    <string name="image_gadget">фото гаджета</string>
    <string name="samsung_galaxy_a52_5g_eu">Смартфон Samsung Galaxy A52 5G EU</string>
    <string name="_45000">45000 сом</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="arrow">стрелка</string>
    <string name="memory">Память :</string>
    <string name="color">Цвет:</string>
    <string name="white">Белый</string>
    <string name="equipment">Комплектация :</string>
    <string name="standard">Стандард</string>
    <string name="total">Итого :</string>
    <string name="_135000">135000 сом</string>
    <string name="pay">Оплатить</string>

</resources>