<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/black_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"
        android:hint="@string/phone_number"
        android:inputType="text"
        android:paddingStart="14dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="14dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_et"
        android:hint="@string/surname"
        android:inputType="text"
        android:paddingStart="14dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        tools:ignore="Autofill,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:hint="@string/Enter_the_password"
        android:textColorHint="@color/dark_60"
        app:boxStrokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/et_surname"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black_2"
            android:background="@drawable/bg_et"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/agreement"
        android:textColor="@color/dark_60"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/creating_account"
        app:cornerRadius="10dp"
        android:textColor="@color/black_2"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_agreement"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/or_exit"
        android:textColor="@color/primary_2"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exit" />



</androidx.constraintlayout.widget.ConstraintLayout>