<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="156dp"
    android:layout_height="208dp">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="7.5dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/image_gadget"
        android:layout_width="115.5dp"
        android:layout_height="110dp"
        android:layout_marginHorizontal="19dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/gadget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_installment_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.71dp"
        android:background="@drawable/bg_tv_installment_plan"
        android:fontFamily="@font/roboto"
        android:text="@string/_489"
        android:textColor="@color/black_2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_gadget" />

    <TextView
        android:id="@+id/tv_gadget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.29dp"
        android:text="@string/samsung_galaxy_a_52_5g_eu"
        android:textColor="@color/black_2"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_installment_plan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_45_000_c"
        android:textColor="@color/black_2"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gadget_name" />
</androidx.constraintlayout.widget.ConstraintLayout>
