<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/black_2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kod_saved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:gravity="center"
        android:textColor="@color/black_2"
        android:text="@string/kod_saved"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textSize="14sp"
        android:textColor="@color/primary_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_kod_saved" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_number">

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_et"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_getNewKod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/getting_kod"
        android:textColor="@color/primary_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_verification" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/accent"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/verification"
        app:cornerRadius="10dp"
        android:textColor="@color/black_2"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>